changed more contrast issues in: search, showtime and groups

--- a/src/styles/groups/groupsPageGeneral.css
+++ b/src/styles/groups/groupsPageGeneral.css
@@ -42,7 +42,7 @@
 }
 
 .groups-page-general .btn.create-group {
-  background-color: hsl(338, 80%, 58%);
+  background-color: hsl(338, 61%, 45%);
   color: white;
 }
 
